--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: xia.duanjian
+ * @Date: 2022-04-30 20:54:22
+ * @LastEditors: xia.duanjian
+ * @LastEditTime: 2022-05-01 16:08:02
+ * @Description: file content
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,9 +12,22 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      html,
+      body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="height: 100%; width: 100%"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
